--- a/templates/client.html
+++ b/templates/client.html
@@ -672,9 +672,9 @@
       <div class="tab-content active" id="buy-credits">
         <div class="spinner" style="display: none; margin: 10px auto;"></div>
         <h2>Buy Credits</h2>
-        <p>Credit costs: 0.0005 cents USD per credit</p>
-        <p>Minimum bundle: 10,000 credits</p>
-        <input type="number" id="credits-input" placeholder="Enter number of credits (min 10,000)">
+        <p>Credit costs: 1 cent USD per credit</p>
+        <p>Minimum bundle: 1,000 credits</p>
+        <input type="number" id="credits-input" placeholder="Enter number of credits (min 1,000)">
         <button id="checkout-button">Checkout</button>
       </div>
       <div class="tab-content" id="data-collection">
